--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "google/apiclient": "2.15.0",
         "league/oauth2-google": "^4.0",
-        "phpmailer/phpmailer": "^6.8.1"
+        "phpmailer/phpmailer": "^6.8.1",
+        "symfony/deprecation-contracts": "^3.3"
     },
     "autoload": {
         "psr-4": {
